plugins {
    id 'net.fabricmc.fabric-loom' version "${loom_version}"
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

repositories {
    // Fabric maven is added by Loom automatically
    mavenCentral()
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    implementation "net.fabricmc:fabric-loader:${project.loader_version}"
    implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

    testImplementation "org.junit.jupiter:junit-jupiter:5.13.4"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher:1.13.4"
}

processResources {
    def modVersion = project.version.toString()
    inputs.property "version", modVersion
    filteringCharset = "UTF-8"

    filesMatching("fabric.mod.json") {
        expand "version": modVersion
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 25
    it.options.compilerArgs += ["-Xlint:deprecation"]
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
    withSourcesJar()
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

jar {
    def archiveBaseName = project.archives_base_name
    from("LICENSE") {
        rename { "${it}_${archiveBaseName}" }
    }
}


